--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #333;
   font-family: sans-serif;
@@ -10,6 +14,7 @@ body {
 }
 
 nav {
+  background-color: #000000;
   margin: 0 auto;
   padding: 10px 0 15px 15px;
   position: fixed;
@@ -17,5 +22,32 @@ nav {
 }
 
 .restaurant-list {
+  background-color: #ffffff;
   padding-top: 50px;
+  margin: 0 auto;
 }
+
+.content {
+  width: 300px;
+}
+
+.location {
+  padding: 10px 0 15px 15px;
+  border-bottom: 2px solid #999;
+}
+
+.arrow {
+ display: inline;
+}
+
+h1 {
+  font-size: 1.5em;
+  font-weight: bold;
+  line-height: 1.5em;
+  display: inline;
+}
+
+h3 {
+  font-size: 1.2em;
+}
+Change from clone
