--- a/css/style.css
+++ b/css/style.css
@@ -23,28 +23,31 @@ nav {
 
 .restaurant-list {
   background-color: #ffffff;
-  padding-top: 50px;
+  padding-top: 40px;
   margin: 0 auto;
 }
 
 .content {
-  width: 300px;
+  width: 360px;
+  display:inline-block;
+  float: left;
 }
 
 .location {
-  padding: 10px 0 15px 15px;
+  padding: 20px 0px 30px 15px;
   border-bottom: 2px solid #999;
 }
 
-.arrow {
- display: inline;
+.location:hover {
+  background-color: #c0c0c0;
+  padding: 20px 0px 30px 15px;
+  border-bottom: 2px solid #999;
 }
 
 h1 {
   font-size: 1.5em;
   font-weight: bold;
   line-height: 1.5em;
-  display: inline;
 }
 
 h3 {
